--- a/TS/tsconfig.json
+++ b/TS/tsconfig.json
@@ -1,4 +1,11 @@
 {
+    "compilerOptions": {
+        
+    },
     "files":[
+        "./ChainOfResponsibility/*",
+        "./Memento/*",
+        "./Proxy/*",
+        "./Visitor/*"
     ]
 }
