Add rest of created files for patterns to tsconfig file

--- a/TS/tsconfig.json
+++ b/TS/tsconfig.json
@@ -6,6 +6,9 @@
         "./ChainOfResponsibility/*",
         "./Memento/*",
         "./Proxy/*",
-        "./Visitor/*"
+        "./Visitor/*",
+        "./Command/*",
+        "./Observer/*",
+        "./Strategy/*"
     ]
 }
